# razerlinux

./: 99-razer.rules  Cargo.toml  LICENSE  README.md  build.rs  calibrate_cursor.sh  install.sh  nohup.out  reset_mouse.py  test_side_buttons.py  uninstall.sh
.cargo/: config.toml
assets/: razerlinux.service
config/: 99-razermouse.rules
docs/: PROJECT_PLAN.md  SCROLLABLE_AREA_DETECTION.md  WAYLAND_SUPPORT_PLAN.md  WINDOWS_AUTOSCROLL_BEHAVIOR.md
scripts/: build-appimage.sh  build-flatpak.sh
src/: device.rs  hidpoll.rs  macro_engine.rs  main.rs  overlay.rs  profile.rs  protocol.rs  remap.rs  scroll_detect_x11.rs  settings.rs  tray.rs  tray_helper.rs
src/display_backend/: atspi.rs  heuristic.rs  mod.rs  null.rs  wayland.rs  x11.rs
tests/: hardware_tests.rs  integration_tests.rs
ui/: main.slint  main.slint.bak
