[package]
name = "razerlinux"
version = "0.1.0"
edition = "2024"
description = "Razer mouse configuration tool for Linux"
authors = ["Aleksandar Milacic"]
license = "GPL-3.0-only"

[dependencies]
# USB HID communication
hidapi = "2.6"

# Input event handling & virtual input
evdev = "0.12"

# Device hotplug detection  
udev = "0.9"

# Async runtime
tokio = { version = "1", features = ["full"] }

# Serialization for config/profiles
serde = { version = "1", features = ["derive"] }
toml = "0.8"

# Directories (for finding config paths)
dirs = "5"

# Error handling
anyhow = "1"
thiserror = "2"

# Logging
tracing = "0.1"
tracing-subscriber = "0.3"

# GUI - Slint (Qt-like, pure Rust)
slint = "1"

[build-dependencies]
slint-build = "1"
