[package]
name = "razerlinux"
version = "0.2.0"
edition = "2024"
description = "Razer mouse configuration tool for Linux"
authors = ["Aleksandar Milacic"]
license = "GPL-3.0-only"

[features]
default = ["x11", "wayland", "atspi"]
x11 = ["dep:x11rb"]
wayland = ["dep:wayland-client", "dep:wayland-protocols-wlr", "dep:smithay-client-toolkit"]
atspi = ["dep:atspi", "dep:zbus"]

[dependencies]
# USB HID communication
hidapi = "2.6"

# Input event handling & virtual input
evdev = "0.12"
libc = "0.2"

# Device hotplug detection  
udev = "0.9"

# Async runtime
tokio = { version = "1", features = ["full"] }

# Serialization for config/profiles
serde = { version = "1", features = ["derive"] }
toml = "0.8"

# Directories (for finding config paths)
dirs = "5"

# Error handling
anyhow = "1"
thiserror = "2"

# Signal handling for clean shutdown
ctrlc = "3.4"

# Logging
tracing = "0.1"
tracing-subscriber = "0.3"

# GUI - Slint (Qt-like, pure Rust)
slint = "1"

# X11 for overlay window (autoscroll indicator) - optional
x11rb = { version = "0.13", features = ["allow-unsafe-code"], optional = true }

# Wayland support - optional
wayland-client = { version = "0.31", optional = true }
wayland-protocols-wlr = { version = "0.3", optional = true }
smithay-client-toolkit = { version = "0.19", optional = true }

# AT-SPI accessibility for scroll detection (works on both X11 and Wayland) - optional
atspi = { version = "0.22", optional = true }
zbus = { version = "4", optional = true }

# System tray icon
tray-icon = "0.19"
image = { version = "0.25", default-features = false, features = ["png"] }
ksni = "0.2"

[build-dependencies]
slint-build = "1"

# Release profile - optimized for size and performance
[profile.release]
strip = true           # Strip debug symbols
lto = true             # Link-time optimization
codegen-units = 1      # Better optimization (slower compile)
panic = "abort"        # Smaller binary, no unwinding
opt-level = "s"        # Optimize for size (use "3" for speed)

# Dev profile - faster iteration
[profile.dev]
opt-level = 1          # Some optimization for usable debug builds
debug = true           # Keep debug info

# Fast release for testing (between dev and release)
[profile.release-fast]
inherits = "release"
lto = false            # Skip LTO for faster compile
codegen-units = 16     # Parallel compilation
